add new project mini calculator to project page

--- a/projects.html
+++ b/projects.html
@@ -141,6 +141,26 @@
               >
             </div>
           </div>
+
+          <div class="card mx-3 mb-5">
+            <img
+              src="./media/images/mini-calc.png"
+              class="card-img-top"
+              alt="A screenshot of a mini calculator created using Javascript."
+            />
+            <div class="card-body border-top">
+              <h5 class="card-title">Mini calculator</h5>
+              <p class="card-text">
+                Mini calculator created using Javascript and Bootstrap.
+              </p>
+              <a
+                href="https://github.com/SekllanChenRuan/mini-calc/"
+                class="btn btn-primary"
+                target="_blank"
+                >Github Repo Link</a
+              >
+            </div>
+          </div>
         </div>
       </main>
       <footer
