fix repo link and add new project anime trivia

--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
               <h5 class="card-title">Age Calculator</h5>
               <p class="card-text">Age calculator created with Javascript.</p>
               <a
-                href="https://sekllanchenruan.github.io/age-calculator-js/"
+                href="https://github.com/SekllanChenRuan/age-calculator-js"
                 class="btn btn-primary"
                 target="_blank"
                 >Github Repo Link</a
@@ -94,7 +94,7 @@
               <h5 class="card-title">Image Slider</h5>
               <p class="card-text">An image slider created with Javascript.</p>
               <a
-                href="https://sekllanchenruan.github.io/image-slider-js/"
+                href="https://github.com/SekllanChenRuan/image-slider-js"
                 class="btn btn-primary"
                 target="_blank"
                 >Github Repo Link</a
@@ -114,7 +114,7 @@
                 To-Do list created using Javascript and Bootstrap.
               </p>
               <a
-                href="https://sekllanchenruan.github.io/to-do-list-js/"
+                href="https://github.com/SekllanChenRuan/to-do-list-js"
                 class="btn btn-primary"
                 target="_blank"
                 >Github Repo Link</a
@@ -134,7 +134,7 @@
                 Drag and Drop API demo created using Javascript.
               </p>
               <a
-                href="https://sekllanchenruan.github.io/drag-and-drop-js/"
+                href="https://github.com/SekllanChenRuan/drag-and-drop-js"
                 class="btn btn-primary"
                 target="_blank"
                 >Github Repo Link</a
@@ -155,6 +155,26 @@
               </p>
               <a
                 href="https://github.com/SekllanChenRuan/mini-calc/"
+                class="btn btn-primary"
+                target="_blank"
+                >Github Repo Link</a
+              >
+            </div>
+          </div>
+
+          <div class="card mx-3 mb-5">
+            <img
+              src="./media/images/animetrivia.png"
+              class="card-img-top"
+              alt="A screenshot of an anime trivia app."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Anime Trivia</h5>
+              <p class="card-text">
+                Anime trivia game created with Javascript.
+              </p>
+              <a
+                href="https://github.com/SekllanChenRuan/anime-quiz-app"
                 class="btn btn-primary"
                 target="_blank"
                 >Github Repo Link</a
