fix navbar and add google api page called favorite.html

--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,7 @@
                 <a class="nav-link" href="./about.html">About</a>
                 <a class="nav-link" href="./fade.html">Fade</a>
                 <a class="nav-link" href="./projects.html">Projects</a>
+                <a class="nav-link" href="./favorite.html">Favorite</a>
                 <a
                   class="nav-link active"
                   aria-current="page"
