--- a/fade.html
+++ b/fade.html
@@ -51,6 +51,7 @@
                   >Fade</a
                 >
                 <a class="nav-link" href="./projects.html">Projects</a>
+                <a class="nav-link" href="./favorite.html">Favorite</a>
                 <a class="nav-link" href="./contact.html">Contact</a>
                 <a class="nav-link" href="./jonathan.html">???</a>
               </div>
