--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <a class="nav-link" href="./about.html">About</a>
                 <a class="nav-link" href="./fade.html">Fade</a>
                 <a class="nav-link" href="./projects.html">Projects</a>
+                <a class="nav-link" href="./favorite.html">Favorite</a>
                 <a class="nav-link" href="./contact.html">Contact</a>
                 <a class="nav-link" href="./jonathan.html">???</a>
             </div>
